Configurable IRC properties

--- a/kotbot.config.json.example
+++ b/kotbot.config.json.example
@@ -1,4 +1,8 @@
 {
+  "username": "kotbot",
+  "hostname": "localhost",
+  "channel": "#discodevs",
+  "port": 6667,
   "testConfig": "foobar",
   "emptyString": ""
 }
