--- a/kotbot.config.json.example
+++ b/kotbot.config.json.example
@@ -3,6 +3,8 @@
   "hostname": "localhost",
   "channel": "#discodevs",
   "port": 6667,
+  "identify_password": "",
+  "identify_owner": "",
   "testConfig": "foobar",
   "emptyString": ""
 }
