Remove unused strings from config

--- a/kotbot.config.json.example
+++ b/kotbot.config.json.example
@@ -4,7 +4,5 @@
   "channel": "#example",
   "port": 6667,
   "identify_password": "",
-  "identify_owner": "",
-  "testConfig": "foobar",
-  "emptyString": ""
+  "identify_owner": ""
 }
