Improve weather plugin & move to own file

--- a/kotbot.config.hjson.example
+++ b/kotbot.config.hjson.example
@@ -20,4 +20,7 @@
   # OpenWeatherMap API Key for current weather data
   # https://openweathermap.org/api
   openweathermap: ""
+
+  # IANA Time Zone string
+  timezone: "America/New_York"
 }
